# CV-OCR-Offline-Deployment-

./: .gitignore  ANNOTATION_CONVERSION.md  CLASS_MAPPING_FIX.md  README.md  Readme.md  convert_annotations.py  example_usage.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py  train_classifier.py  train_detection.py
.github/workflows/: ci.yml
datasets/: README.md  README.roboflow.txt  data.yaml
datasets/annotations/: test.json  train.json  val.json
outputs/: pexels-anush-gorak-1229356_jpg.rf.1f68f809c159ec17bfb761e9cbc043ad_detections_20260112_123351.json  pexels-anush-gorak-1229356_jpg.rf.1f68f809c159ec17bfb761e9cbc043ad_summary_20260112_123351.json  pexels-future-kiiid-3551498_jpg.rf.c31d12719b1987c5563a35c4d5f02298_detections_20260112_123501.json  pexels-future-kiiid-3551498_jpg.rf.c31d12719b1987c5563a35c4d5f02298_summary_20260112_123501.json
src/: main.py
src/common/: __init__.py  dependencies.py  exceptions.py
src/common/config/: __init__.py  logging_config.py  settings.py
src/common/utils/: json_utils.py  objectid_utils.py  timestamp_utils.py  timezone_utils.py  validation_utils.py
src/domains/detection/: models.py  routes.py  services.py
src/domains/ocr/: model.py  routes.py
tests/: test_api.py
